cks-solutions/s_04/newNS.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    gk-ns: "yes"
  name: haslabel
spec:
