cks-solutions/s_04/runtimepod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: simple-gvisor
spec:
  runtimeClassName: gvisor     #<<--This must match the name of the runtime
  containers:
  - name: secure-nginx
    image: nginx
